--- a/templates/admin/properties.html.twig
+++ b/templates/admin/properties.html.twig
@@ -21,5 +21,8 @@
             {% endfor %}
         </tbody>
     </table>
+    <div>
+        <a class='btn btn-primary' href="{{path('adminpropertiesadd')}}">Ajouter un bien</a>
+    </div>
 </div>
 {% endblock %}
