--- a/templates/admin/header.html.twig
+++ b/templates/admin/header.html.twig
@@ -1,5 +1,5 @@
 <div class="btn-secondary">
     <img src="{{ asset('build/images/Logo.gif') }}" alt="">
-    <span>{% if app.user %}{{ title }}{% else %}Accès interdit - non authentifié{% endif %}</span>
+    <span>{% if app.user %}Partie Administration{% else %}Accès interdit - non authentifié{% endif %}</span>
 
 </div>
