--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 
-{% block body %}
+{% block content %}
 {% include "home/header.html.twig" %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
