--- a/templates/home/base.html.twig
+++ b/templates/home/base.html.twig
@@ -3,6 +3,21 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-{% include "home/header.html.twig" %}
-{% block content %}{% endblock %}
-{% endblock %}
+{% include "home/_header.html.twig" %}
+{% if app.user %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 col-md-2">
+            {% include "home/_menu.html.twig" %}
+        </div>
+        <div class="col-12 col-md-10">
+            {% else %}
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        {% endif %}
+                        {% block content %}{% endblock %}
+                    </div>
+                </div>
+            </div>
+            {% endblock %}
