--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,15 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'home/base.html.twig' %}
 
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block content %}
-{% include "home/header.html.twig" %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
@@ -18,5 +11,4 @@
         <li>Your template at <code><a href="{{ 'C:/wamp64/www/agence-immo-lievin/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
     </ul>
     <a href="{{ path('admin') }}">admin</a>
-</div>
 {% endblock %}
