--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-{% include "admin/header.html.twig" %}
+{% include "admin/_header.html.twig" %}
 
 <div class="container-fluid">
     <div class="row">
