Public/Userspace Template

--- a/templates/home/_menu.html.twig
+++ b/templates/home/_menu.html.twig
@@ -1,5 +1,5 @@
-<ul class="list-unstyled mt-5">
-    <li>Informations Personnelles</li>
-    <li>Mes Favoris</li>
-    <li>Proposer un bien</li>
-</ul>
+<div class="d-flex justify-content-center">
+    <a href="">Notre Agence</a>&nbsp;|&nbsp;
+    <a href="">Locations</a>&nbsp;|&nbsp;
+    <a href="">Ventes</a>
+</div>
