--- a/templates/admin/importexport.html.twig
+++ b/templates/admin/importexport.html.twig
@@ -1,5 +1,41 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block container %}
-
+<div class="row border">
+    <!-- Import -->
+    <form action="POST" class="row col-12" id="importform">
+        <div class="form-group col-12">
+            <label for="importfile">Importer la liste des biens (format CSV)</label>
+            <input type="file" name="exportfile" id="importfile" class='form-control'>
+        </div>
+        <div class="col-12 text-center">
+            <button class="btn btn-primary">Analyser</button>
+        </div>
+    </form>
+    {% if analyse %}
+    {{ render(controller(
+        'App\\Controller\\AdminController::importanalyse', {analyse : analyse}
+    )) }}
+    {% endif %}
+</div>
+<div class="row border">
+    <!-- Export -->
+    <form action="POST" class="col-12 row" id="exportform">
+        <div class="form-group col-12">
+            <label for="exportfile">Exporter la liste des biens (format CSV)</label>
+            <input type="file" name="exportfile" id="exportfile" class='form-control'>
+        </div>
+        <div class="form-group col-4">
+            <span>Du : </span>
+            <input type="date" name="" id="">
+        </div>
+        <div class="form-group col-4">
+            <span>Au : </span>
+            <input type="date" name="" id="">
+        </div>
+        <div class="form-group col-4">
+            <button class="btn btn-primary">Exporter</button>
+        </div>
+    </form>
+</div>
 {% endblock %}
