--- a/templates/home/_header.html.twig
+++ b/templates/home/_header.html.twig
@@ -1,5 +1,10 @@
 <div class="btn-secondary">
-    <img src="{{ asset('build/images/Logo.gif') }}" alt="">
+   <a href="{{ path('home') }}"><img src="{{ asset('build/images/Logo.gif') }}" alt=""></a>
     <span>{{ title }}</span>
-
+    {% if app.user %}
+    <a href="{{ path('app_logout') }}">Déconnection</a>
+    {% else %}
+   <a href="{{ path('app_login') }}">Connection</a>
+    {% endif %}
+    <a href="{{ path('userpropose') }}">Proposer un bien</a>
 </div>
