Global Picture OK
Reste à faire Admin Property -> preremplir avec les images en base pour preview

--- a/templates/home/_property.card.html.twig
+++ b/templates/home/_property.card.html.twig
@@ -1,7 +1,7 @@
 <div class="col-4">
     <div class="card mx-4 mb-4">
         <div class="card-header">
-            <a href="{{ path('propertyview',{id : property.id }) }}"><img src="{{ asset('build/images/empty.jpg') | imagine_filter('card') }}" alt="" class='img-fluid'></a>
+            <a href="{{ path('propertyview',{id : property.id }) }}"><img src="{{ asset('build/images/' ~ property.imagename1) | imagine_filter('card') }}" alt="" class='img-fluid'></a>
         </div>
         <div class="card-body">
             <h5 class="card-title">{{ property.label }}</h5>
