--- a/templates/userspace/propose.html.twig
+++ b/templates/userspace/propose.html.twig
@@ -30,7 +30,7 @@
         {{ form_row(form.image3) }}
     </div>
 </div>
-<div class="row">
+<div class="row mt-5">
     {{ form_row(form.submit, { 'label': 'Ajouter le bien' }) }}
 </div>
 {{ form_end(form) }}
