--- a/templates/admin/properties.edit.html.twig
+++ b/templates/admin/properties.edit.html.twig
@@ -36,6 +36,26 @@
         </fieldset>
     </div>
 </div>
+<div class="row  pt-2 align-items-end">
+    <div class="col-4">
+        {% if imagename1 %}
+        <img src="{{ asset('build/images/' ~ imagename1) | imagine_filter('card') }}" alt="" id='image1'>
+        {% endif %}
+        {{ form_row(form.image1) }}
+    </div>
+    <div class="col-4">
+        {% if imagename2 %}
+        <img src="{{ asset('build/images/' ~ imagename2) | imagine_filter('card') }}" alt="" id='image2'>
+        {% endif %}
+        {{ form_row(form.image2) }}
+    </div>
+    <div class="col-4">
+        {% if imagename3 %}
+        <img src="{{ asset('build/images/' ~ imagename3) | imagine_filter('card') }}" alt="" id='image3'>
+        {% endif %}
+        {{ form_row(form.image3) }}
+    </div>
+</div>
 <fieldset class='border px-1 mb-2'>
     <legend class="w-auto ml-2">Adresse</legend>
     {{ form_row(form.idaddress.address1) }}
@@ -52,6 +72,7 @@
     </div>
 </fieldset>
 {{ form_row(form.submit, { 'label': 'Mettre à jour le bien' }) }}
+<div class="d-none">{{ form_rest(form) }}</div>
 {{ form_end(form) }}
 
 {% endblock %}
