--- a/templates/home/_menu.html.twig
+++ b/templates/home/_menu.html.twig
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center">
     <a href="">Notre Agence</a>&nbsp;|&nbsp;
-    <a href="">Locations</a>&nbsp;|&nbsp;
-    <a href="">Ventes</a>
+    <a href="{{ path('properties',{type : 'Location'}) }}">Locations</a>&nbsp;|&nbsp;
+    <a href="{{ path('properties',{type : 'Vente'}) }}">Ventes</a>
 </div>
