--- a/templates/home/properties.html.twig
+++ b/templates/home/properties.html.twig
@@ -1,7 +1,7 @@
 {% extends 'home/base.html.twig' %}
 
 {% block content %}
-<div>
+<div id="propertiesfilter">
     {{ form_start(form)}}
     <div class="row">
         <div class="col-12 col-md-4">
@@ -38,11 +38,8 @@
     </div>
     {{ form_end(form)}}
 </div>
-<div class="row">
-    {% for property in properties %}
-    {{ include('home/_property.card.html.twig',{property : property}) }}
-    {% endfor %}
-    {{ knp_pagination_render(properties) }}
+<div class="row" id="_properties">
+    {% include "home/_properties.html.twig" %}
 </div>
 {% endblock %}
 
