--- a/templates/admin/importexport.html.twig
+++ b/templates/admin/importexport.html.twig
@@ -27,17 +27,21 @@
         <div class="form-group col-12">
             <h2>Exporter la liste des biens (format CSV)</h2>
         </div>
-        <div class="form-group col-12 col-md-4">
+        {# <div class="form-group col-12 col-md-4">
             <label for='exportdate1'>Du : </label>
             <input type="date" name="exportdate1" id="exportdate1">
         </div>
         <div class="form-group col-12 col-md-4">
             <label for='exportdate2'>Au : </label>
             <input type="date" name="exportdate2" id="exportdate2">
+        </div> #}
+        {{ form_start(formExport) }}
+        <div class="row align-items-end col-12">
+            <div class="col-12 col-md-4">{{ form_row(formExport.minDate) }}</div>
+            <div class="col-12 col-md-4">{{ form_row(formExport.maxDate) }}</div>
+            <div class="col-12 col-md-4">{{ form_row(formExport.submitExport) }}</div>
         </div>
-        <div class="form-group col-12 col-md-4">
-            <button class="btn btn-primary" type="submit">Exporter</button>
-        </div>
+        {{ form_end(formExport) }}
     </form>
 </div>
 {% endblock %}
