--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,6 +3,7 @@
 @import "../FontAwesome/css/fontawesome.css";
 @import "../FontAwesome/css/solid.css";
 @import "../bootstrap-fileinput/css/fileinput.min.css";
+@import "~jquery-ui/themes/base/all.css";
 
 .height-thumb {
   height: 90px;
