--- a/templates/admin/properties.edit.html.twig
+++ b/templates/admin/properties.edit.html.twig
@@ -39,19 +39,19 @@
 <div class="row  pt-2 align-items-end">
     <div class="col-4">
         {% if imagename1 %}
-        <img src="{{ asset('build/images/' ~ imagename1) | imagine_filter('card') }}" alt="" id='image1'>
+        <img src="{{ asset('build/images/' ~ imagename1) | imagine_filter('card') }}" alt="" id='image1' class="img-fluid d-none">
         {% endif %}
         {{ form_row(form.image1) }}
     </div>
     <div class="col-4">
         {% if imagename2 %}
-        <img src="{{ asset('build/images/' ~ imagename2) | imagine_filter('card') }}" alt="" id='image2'>
+        <img src="{{ asset('build/images/' ~ imagename2) | imagine_filter('card') }}" alt="" id='image2' class="img-fluid d-none">
         {% endif %}
         {{ form_row(form.image2) }}
     </div>
     <div class="col-4">
         {% if imagename3 %}
-        <img src="{{ asset('build/images/' ~ imagename3) | imagine_filter('card') }}" alt="" id='image3'>
+        <img src="{{ asset('build/images/' ~ imagename3) | imagine_filter('card') }}" alt="" id='image3' class="img-fluid d-none">
         {% endif %}
         {{ form_row(form.image3) }}
     </div>
