Register and User Deleted Logic

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -42,4 +42,7 @@
         Se Connecter
     </button>
 </form>
+<div class="row text-center">
+    <a href="{{ path('register') }}">Pas de compte, clickez ici pour vous enregistrer.</a>
+</div>
 {% endblock %}
